--- a/app/src/main/res/layout/fragment_meteo.xml
+++ b/app/src/main/res/layout/fragment_meteo.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/monLayoutFragment"
+    android:id="@+id/fragment_meteo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MeteoFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tv_meteo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Meteo" />
+        android:text="Météo..."
+        android:textSize="30sp"
+        />
+
+    <EditText
+        android:id="@+id/tv_choix_ville"
+        android:hint="Choisir une ville"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <Button
+        android:id="@+id/btn_choix_ville"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ok"
+        android:layout_gravity="right"
+        />
 
 </LinearLayout>
