--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,34 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:outlineAmbientShadowColor="@color/black">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/activity_item_titre"
+    android:background="@drawable/card"
+    android:layout_margin="20dp"
+    >
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        app:cardCornerRadius="4dp"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        >
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Faire l'exercice"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:id="@+id/todo_item_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Crée le 24/07/2021"
-            android:layout_weight="1"
-            />
-        <Button
-            android:id="@+id/todo_item_btn_fini"
-            android:layout_width="60sp"
-            android:layout_height="wrap_content"
-            android:text="Fait"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
+            android:layout_height="180dp"
+            android:layout_margin="20dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/activity_item_titre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Faire l'exercice"
+                android:textAlignment="center"
+                android:textSize="15sp"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/todo_item_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="italic"
+                android:text="Crée le 24/07/2021" />
+
+            <Button
+                android:id="@+id/todo_item_btn_fini"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:text="Fait" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
