--- a/app/src/main/res/layout/fragment_meteo.xml
+++ b/app/src/main/res/layout/fragment_meteo.xml
@@ -7,14 +7,26 @@
     android:orientation="vertical"
     tools:context=".MeteoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
     <TextView
         android:id="@+id/tv_meteo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Météo..."
         android:textSize="30sp"
+        android:layout_weight="1"
         />
+        <ImageView
+            android:id="@+id/img_soleil"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/soleil"
+            />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/tv_choix_ville"
